# miniprojekti_ryhma1

./: .coverage  .coveragerc  .gitignore  .pylintrc  LICENSE.md  README.md  log.html  output.xml  pyproject.toml  report.html  retro.md
.github/workflows/: main.yml
results/: log.html  output.xml  report.html
src/: RobotLibrary.py  StubIO.py  helloworld.py  main.py  scraper.py  scraper_example.py  viitteet.bib
src/funktiot/: bibtex_funktiot.py  lisaa_viite.py  listaa_viitteet.py  poista_viite.py  yksittainen_viite.py
src/projekti/: main.py  viitteet.bib
src/projekti/funktiot/: bibtex_funktiot.py
src/tests/: hae_viite.robot  lisaa_viite.robot  listaa_viitteet.robot  poista_viite.robot  resource.robot  test_bibtex_funktiot.py  test_helloworld.py  test_scraper.py
