[project]
name = "miniprojekti-ryhma1"
version = "0.1.0"
description = "Ohjelmistotuotanto kurssin ryhmän 1 miniprojekti"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
